[metadata]
name = etl-tool
version = 0.0.1
author = Anastasia Romanova
url = https://github.com/anastasiaromane/etl-tool
description = ETL Tool
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent